--- a/src/CMS/Bundle/MenuBundle/Resources/translations/messages.fr.yml
+++ b/src/CMS/Bundle/MenuBundle/Resources/translations/messages.fr.yml
@@ -1,4 +1,3 @@
-'Symfony2 is great': 'J''aime Symfony2'
 cms.menu.entry: Entrées de menu
 cms.entry.title: Titre
 cms.entry.external: Lien externe
@@ -17,3 +16,4 @@ cms.menu.menu_taxonomy: Type de menu
 cms.menu.title: Titre
 cms.menu.slug: Alias
 cms.menu.status: Publié
+cms.menu.position: position
