champ musique avec deezer ou spotify comme api

--- a/src/CMS/Bundle/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/CMS/Bundle/CoreBundle/Resources/translations/messages.fr.yml
@@ -79,6 +79,9 @@ cms:
         media: Media
         featured_image: Ajouter image
 
+    core:
+        share: Partagez
+
 firstname: Prénom
 lastname: Nom
 id_twitter: Identifiant Twitter
