menu admin, traduction et creation du yml

--- a/src/CMS/Bundle/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/CMS/Bundle/CoreBundle/Resources/translations/messages.fr.yml
@@ -82,6 +82,9 @@ cms:
     core:
         share: Partagez
         view_site: Voir le site
+        dashboard: Dashboard
+        appearance: Apparence
+        administration: Préférences
 
 firstname: Prénom
 lastname: Nom
