amp, seo content and category

--- a/src/CMS/Bundle/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/CMS/Bundle/CoreBundle/Resources/translations/messages.fr.yml
@@ -91,6 +91,8 @@ cms:
         settings: Réglages
         users: Utilisateurs
         backup: Sauvegarde
+        creation: Création
+        edition: Edition
 
 firstname: Prénom
 lastname: Nom
