--- a/src/CMS/Bundle/ContentBundle/Resources/translations/messages.fr.yml
+++ b/src/CMS/Bundle/ContentBundle/Resources/translations/messages.fr.yml
@@ -43,7 +43,7 @@ cms:
   category:
     modal:
       title_delete: Suppression de catégorie
-      text_delete:'Êtes-vous sûr de vouloir supprimer cette catégorie ?
+      text_delete: Êtes-vous sûr de vouloir supprimer cette catégorie ?
   field:
     modal:
       title_delete: Suppression du champ
